1. Navigation Bar 추가 2. Bar Button Item추가하여 새로운 셀 추가 기능

--- a/TableViewInStoryboard/Views/Base.lproj/Main.storyboard
+++ b/TableViewInStoryboard/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cxe-K4-ezp">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="hL4-bB-fi6">
-                                <rect key="frame" x="0.0" y="59" width="393" height="793"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="749"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="MovieCell" rowHeight="132" id="aUc-IN-maP" customClass="MovieCell" customModule="TableViewInStoryboard" customModuleProvider="target">
@@ -83,25 +83,32 @@
                             <constraint firstItem="hL4-bB-fi6" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zwg-wE-v1d"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="OUj-se-NV3">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Ssu-9h-xe5">
+                            <connections>
+                                <action selector="addButtonTapped:" destination="BYZ-38-t0r" id="Uwt-fU-tz3"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="hL4-bB-fi6" id="hW4-dv-0uN"/>
-                        <segue destination="bir-B9-y9T" kind="presentation" identifier="toDetail" id="cDS-Tv-doy"/>
+                        <segue destination="bir-B9-y9T" kind="show" identifier="toDetail" id="cDS-Tv-doy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="127.48091603053435" y="-27.464788732394368"/>
+            <point key="canvasLocation" x="1054.1984732824426" y="-27.464788732394368"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="nOs-gx-wce">
             <objects>
                 <viewController id="bir-B9-y9T" customClass="DetailViewController" customModule="TableViewInStoryboard" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="K0W-ia-aNv">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="pKP-e7-h6S">
-                                <rect key="frame" x="76.666666666666686" y="100" width="240" height="330"/>
+                                <rect key="frame" x="76.666666666666686" y="203" width="240" height="330"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="9HA-SO-3fn">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="240"/>
@@ -138,6 +145,7 @@
                             <constraint firstItem="pKP-e7-h6S" firstAttribute="top" secondItem="jYg-OI-2Hw" secondAttribute="top" constant="100" id="odN-0z-AaN"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="r4h-RE-TAG"/>
                     <connections>
                         <outlet property="descriptionLabel" destination="gQU-Ia-sVf" id="ynB-dn-4Ep"/>
                         <outlet property="mainImageView" destination="9HA-SO-3fn" id="tzx-gY-roj"/>
@@ -146,7 +154,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fYV-ml-6PT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1025" y="-27"/>
+            <point key="canvasLocation" x="1950.3816793893129" y="-27.464788732394368"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4BQ-zg-khL">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cxe-K4-ezp" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="HPC-TQ-tVR">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="wd6-km-pE3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LC5-cL-X7R" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="127.48091603053435" y="-27.464788732394368"/>
         </scene>
     </scenes>
     <resources>
